<resources>
    <string name="app_name">PrimeraPractica</string>
    <string name="nombre">Captura tu nombre</string>
    <string name="limpiar">Limpiar</string>
    <string name="pulsar">Pulsar</string>
    <string name="cerrar">Cerrar</string>
    <string name="alumno">Beatriz Osuna Ortega</string>
    <string name="matricula">22050556</string>
    <string name="materia">Programación Movil</string>

    <string name="altura">Captura la altura (ej: 1.65)</string>
    <string name="peso">Captura el peso </string>
    <string name="msj">El resultado aparece aqui</string>

    <string-array name="array_conversiones">
        <item>Pesos Mexicanos - Dolares Americanos</item>
        <item>Pesos Mexicanos - Dolares Canadienses</item>
        <item>Pesos Mexicanos - Euros</item>
        <item>Dolares Americanos - Pesos Mexicanos</item>
        <item>Dolares Canadienses- Pesos Mexicanos - </item>
        <item>Euros - Pesos Mexicanos</item>
    </string-array>
    <string name="dolar">19.75</string>
    <string name="dolarc">14.75</string>
    <string name="euro">22.02</string>

    <string name="domicilio">Av. del Mar 1200 </string>
    <string name="ciudad">Mazatlan Sinaloa</string>
    <string name="marca">Toyota</string>
    <string name="cliente"> Nombre del Cliente</string>
    <string name="folio">Num. Folio</string>
    <string name="des">Descripcion del Automovil</string>
    <string name="precio">Valor del Automovil</string>
    <string name="po">Porcentaje de pago Inicial</string>
    <string name="plazos">Plazos</string>
    <string name="pmensual">Pago Mensual</string>
    <string name="pinicial">Pago Inicial</string>
    <string name="tfin">Total a Financiar</string>

</resources>