<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_cotizacion">

<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10sp"
        android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="Nombre del Cliente"
        android:textSize="20sp"
        android:textColor="@color/miAzul"
        android:id="@+id/txtCliente"
        android:paddingBottom="10sp">
    </TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/folio"
        android:id="@+id/txtFolio">
    </TextView>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/des"
        android:id="@+id/txtDescripcion"
        android:paddingBottom="20sp">
    </EditText>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pinicial"
        android:inputType="numberDecimal"
        android:textAlignment="textEnd"
        android:id="@+id/txtPorcentaje"
        android:paddingBottom="20sp">
    </EditText>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/precio"
        android:textAlignment="textEnd"
        android:id="@+id/txtPrecio"
        android:paddingBottom="20sp"
        android:inputType="number">
    </EditText>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/plazos"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/miAzul"
        android:paddingBottom="20sp">
    </TextView>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <RadioButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="12 Meses"
        android:id="@+id/rdb12"
        android:checked="true">
    </RadioButton>
    <RadioButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="24 Meses"
        android:id="@+id/rdb24">
    </RadioButton>
    <RadioButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="36 Meses"
        android:id="@+id/rdb36">
    </RadioButton>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="48 Meses"
            android:id="@+id/rdb48">
        </RadioButton>
    </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Calcular"
            android:id="@+id/btnCalcular">
        </Button>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Limpiar"
            android:id="@+id/btnLimpiar">
        </Button>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cerrar"
            android:id="@+id/btnCerrar">
        </Button>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Calculos"
        android:textSize="20sp"
        android:textColor="@color/miAzul"
        android:textAlignment="center"
        android:paddingTop="10sp">
    </TextView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pinicial"
        android:id="@+id/txtPagoInicial"
        android:textSize="20sp">
    </TextView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tfin"
        android:id="@+id/txtTotalFin"
        android:textSize="20sp">
    </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pmensual"
            android:id="@+id/txtPagoMensual"
            android:textSize="20sp">
        </TextView>
    </LinearLayout>
</ScrollView>