<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".imcActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10sp">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtAltura"
        android:textSize="16dp"
        android:hint="@string/altura"
        android:paddingBottom="10sp">
    </EditText>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtPeso"
        android:textSize="16dp"
        android:hint="@string/peso"
        android:paddingBottom="10sp">
    </EditText>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtResultado"
            android:textSize="16sp"
            android:textColor="@color/miAzul"
            android:text="@string/msj"
            android:gravity="center">
        </TextView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10sp"
            android:layout_gravity="center">


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Calcular"
                android:id="@+id/btnCalcular">
            </Button>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Limpiar"
                android:id="@+id/btnLimpiar">
            </Button>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cerrar"
                android:id="@+id/btnCerrar">
            </Button>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>